@@ -31,6 +31,10 @@ mjb.skin.dir=./skins/default
 # Number of Days a file is considered for the NEW category
 mjb.newdays=7
 
+# Specify the IP address and port number of the MyiHome server.
+# This is inserted into the JSP playlist file. If you are not using MyiHome DO NOT ENABLE this setting.
+#mjb.myiHome.IP=http://192.168.2.100
+
 ######################################################
 ## Filename scanner
 #
