@@ -77,6 +77,7 @@ public class MovieJukeboxHTMLWriter {
 
         public void generatePlaylist(String rootPath, String tempRootPath, Movie movie) {
             try {
+                String myiHomeIP = PropertiesUtil.getProperty("mjb.myiHome.IP", "");
                 if (movie.getFiles().size() > 1) {
                     String tempFilename = tempRootPath + File.separator + movie.getBaseName();
                     File finalPlaylistFile = new File(rootPath + File.separator + movie.getBaseName() + ".playlist.jsp");
@@ -87,9 +88,11 @@ public class MovieJukeboxHTMLWriter {
 
                         PrintWriter writer = new PrintWriter(tempPlaylistFile);
 
+                        // Issue 237 - Add in the IP address of the MyiHome server so the playlist will work.
+                        // Issue 237 - It is perfectly valid for "mjb.myiHome.IP" to be blank, in fact this is the the normal method for standalone YAMJ
                         for (MovieFile part : movie.getFiles()) {
-                            // write one line each in the format "name|0|0|path" replacing an | that may exist in the title
-                            writer.println(movie.getTitle().replace('|', ' ') + " " + part.getPart() + "|0|0|" + part.getFilename() + "|");
+                            // write one line each in the format "name|0|0|IP/path" replacing an | that may exist in the title
+                            writer.println(movie.getTitle().replace('|', ' ') + " " + part.getPart() + "|0|0|" + myiHomeIP + part.getFilename() + "|");
                         }
                         writer.flush();
                         writer.close();
