@@ -21,6 +21,7 @@ MovieJukebox 1.0.13 beta
   - Fixed Defect #228 Thumbnail and poster generation fails if the artwork is not downloaded as part of this run
   - Fixed Defect #230 Ignore trailers in next & last entry
   - Fixed defect #235 Filmweb plugin - better url identifying in NFO files
+  - Fixed Defect #237 Support for the playlist "PLAY ALL" function in myiHome
   - Fixed Defect #243 Trailer tag not removing ending ']'
   - Fixed Defect #251 Movies with IT in the title are incorectly labeled as Italian
   - Enhancement  #?   Updated PosterScanner to search for the foldername.* and folder.* for coverart (for TV Series)
